--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=user;CASE_INSENSITIVE_IDENTIFIERS=TRUE;
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
+# Accessing the H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+# To prevent trace output
+spring.h2.console.settings.trace=false
+# To disable remote access
+spring.h2.console.settings.web-allow-others=false
+
+management.endpoints.web.exposure.include=health,caches
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=10m,recordStats
